WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195720
REGRESSION (
r242908
): 'NSInvalidArgumentException', reason: '+[PKPaymentMerchantSession count]: unrecognized selector sent to class 0x1c0fae060'
https://bugs.webkit.org/show_bug.cgi?id=195720
Summary
REGRESSION (r242908): 'NSInvalidArgumentException', reason: '+[PKPaymentMerch...
Timothy Hatcher
Reported
2019-03-13 17:54:32 PDT
We need to add back decode(Decoder& decoder, Class allowedClass).
Attachments
Patch
(2.16 KB, patch)
2019-03-13 17:57 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-03-13 17:57:18 PDT
Created
attachment 364599
[details]
Patch
Andy Estes
Comment 2
2019-03-13 17:58:46 PDT
Comment on
attachment 364599
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364599&action=review
> Source/WebKit/ChangeLog:8 > + Add back decode(Decoder& decoder, Class allowedClass) for Apple Pay code.
Also AVOutputContext and DDActionContext.
Radar WebKit Bug Importer
Comment 3
2019-03-13 17:59:00 PDT
<
rdar://problem/48871921
>
WebKit Commit Bot
Comment 4
2019-03-13 18:40:10 PDT
Comment on
attachment 364599
[details]
Patch Clearing flags on attachment: 364599 Committed
r242930
: <
https://trac.webkit.org/changeset/242930
>
WebKit Commit Bot
Comment 5
2019-03-13 18:40:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug