REGRESSION (r242908):  'NSInvalidArgumentException', reason: '+[PKPaymentMerchantSession count]: unrecognized selector sent to class 0x1c0fae060' https://bugs.webkit.org/show_bug.cgi?id=195720

Reviewed by Andy Estes.

Add back decode(Decoder& decoder, Class allowedClass) for Apple Pay code.

* Shared/Cocoa/ArgumentCodersCocoa.h:
(IPC::decode): Added.


Canonical link: https://commits.webkit.org/210020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242930 268f45cc-cd09-0410-ab3c-d52691b4dbfc